保单攻略页(不需要的文章删除)+细节修改

--- a/app/css/bdm_list.css
+++ b/app/css/bdm_list.css
@@ -146,8 +146,8 @@ header .subtitle {
 }
 .bd-effective img{
 	position: absolute;
-	right: 5px;
-	bottom: 0px;
+	left: 66px;
+	bottom: -22px;
 	width: 60px;
 }
 
