--- a/app/partials/bdm_list.html
+++ b/app/partials/bdm_list.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/bdm_list.css?rev=2600659d8fe5433c5520f81d7abef880">
+<link rel="stylesheet" type="text/css" href="css/bdm_list.css?rev=hjhdghfdgdjghdj">
 <header>
 	<div class="left">
 		<!--
@@ -63,7 +63,7 @@
 					<img class="logo" ng-src="{{policy.icon}}"   />
 					<div style="margin-right: 1rem;">
 						<div class="product">{{policy.name}}</div>
-						<div class="time"><img src="img/clock.jpg"/>  {{policy.coverageDate}}</div>
+						<div class="time" ><img src="img/clock.jpg"/>  {{policy.coverageDate.substring(0,11)}} {{policy.coverageDate.substring(20,30)}} </div>
 					</div>
 					<div style="clear:both;"></div>
 
