--- a/app/css/ring.css
+++ b/app/css/ring.css
@@ -225,13 +225,13 @@
 .left_btn,.right_btn,.right_center {
 	height: 48px;
     line-height: 48px;
-    color: #555;
     background: #fff;
     font-size: 15px;
 }
 .left_btn {
 	width: 45%;
 	text-align: right;
+    color: #555;
 }
 .right_center {
 	width: 10%;
@@ -239,6 +239,7 @@
 }
 .right_btn {
 	width: 45%;
+    color: #ff5c00;
 }
 .font_wei {
 	font-weight: bold;
