--- a/app/partials/bd_education.html
+++ b/app/partials/bd_education.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/bd_education.css?rev=hjdhgjfdgjhj">
+<link rel="stylesheet" href="css/bd_education.css?rev=ghfhfghggjjkj">
 <header class="icon_{{type}}">
 	我的{{getInsuranceCNname()}}保障
 	<span ng-click="goBdmList()">{{data.aggregate_score}}分 <img src="img/arrow_03.jpg" class="arrow"></span>
@@ -99,7 +99,7 @@
 	</div>
 </div>
 
-<div class=" fix_container" >
+<div class=" fix_container select_btn" >
 		<div class="cell_hd cell_primary">
 			<a href="javascript:void(0)" class="btn btn_n_primary left"  ng-click="goUpBd();" id="submitButton">
 				<img src="img/upload_icon.png" style="width:14px;vertical-align: -2px;">
