--- a/app/partials/bdm_detail.html
+++ b/app/partials/bdm_detail.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/bdm_detail.css?rev=kjdfkjgkdfjghfdjk">
+<link rel="stylesheet" type="text/css" href="css/bdm_detail.css?rev=78f4ef29e7572649ad58a8a040703409">
 <div ng-if="isTest == false"  cg-busy="loadingPromise" style="margin-bottom: 50px;">
 	<div class="wrapper " id="my_baodan">
 		<img src="img/yiyanzhen.png"  ng-show="data.status==3" style="position: absolute;top:9px;right:11px;width:70px;z-index: 5;">
