--- a/app/partials/bdm_list.html
+++ b/app/partials/bdm_list.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/bdm_list.css?rev=hjhdghfdgdjghdj">
+<link rel="stylesheet" type="text/css" href="css/bdm_list.css?rev=b39b820344afed7a7402aa78946057b0">
 <header>
 	<div class="left">
 		<!--
