--- a/app/css/bd_education.css
+++ b/app/css/bd_education.css
@@ -302,8 +302,8 @@ table td, th {
         transform: scale(0.5); } }
     @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
       .more-container::after {
-        width: 300%;
-        height: 300%;
+        width: 200%;
+        height: 200%;
         -webkit-transform: scale(1/3);
         transform: scale(1/3); } }
 
@@ -315,19 +315,23 @@ table td, th {
   line-height: 40px;
   border-bottom: 1px solid #e2e2e2; }
 
+.select_btn {
+  height: 48px;
+  box-sizing: border-box; }
+
 .fix_container .left {
   background-color: #fff;
   color: #1e4e8e;
   border-radius: 0;
-  height: 50px;
-  line-height: 50px;
+  height: 48px;
+  line-height: 48px;
   font-size: 15px; }
 
 .fix_container .right {
   background-color: #1e4e8e;
   border-radius: 0;
-  height: 50px;
-  line-height: 50px;
+  height: 48px;
+  line-height: 48px;
   font-size: 15px; }
 
 .fix_container img {
