--- a/app/css/bz.css
+++ b/app/css/bz.css
@@ -670,7 +670,7 @@ table td {
     top: 0;
     left: 0;
     content: "\0020";
-    border-color: #d9d9d9;
+    border-color: #e0e0e0;
     border-style: solid;
     border-width: 0 0 1px 0;
     -webkit-box-sizing: border-box;
@@ -689,8 +689,8 @@ table td {
         transform: scale(0.5); } }
     @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
       table td::after {
-        width: 300%;
-        height: 300%;
+        width: 200%;
+        height: 200%;
         -webkit-transform: scale(1/3);
         transform: scale(1/3); } }
 
@@ -738,5 +738,6 @@ table th {
   width: 45%;
   color: #ff5c00; }
 
-.font_wei {
-  font-weight: bold; }
+.select_btn {
+  height: 48px;
+  box-sizing: border-box; }
