--- a/app/partials/index_part.html
+++ b/app/partials/index_part.html
@@ -32,7 +32,10 @@ body{
   color:#1e4e8e;
   background-color:#f0f0f0 ;margin-right:50%;width:auto;border-radius: 0;
 }
-
+.select_btn {
+  height: 48px;
+  box-sizing: border-box;
+}
 .left:active{
   background-color:#e0e0e0;
 }
@@ -79,7 +82,7 @@ body{
 </div>
 -->
 
-<div class=" fix_container">
+<div class=" fix_container select_btn">
   <a href="javascript:void(0)" class="btn btn_n_primary right" ng-click="showTip()" ><img src="img/tsbz.png">&nbsp;提升保障</a>
   <a href="javascript:void(0)" class="btn btn_n_primary left " ng-click="goBdMange()"><img src="img/bdgl.png">&nbsp;保单管理</a>
 </div>
