--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/ring.css?rev=629879cc8593b261206855e9faa98bf0">
+<link rel="stylesheet" type="text/css" href="css/ring.css?rev=dfgfdgfhgfhghj">
 
 <div  class="wrapper"  data-ng-init="init()" style="overflow: hidden;">
 
@@ -125,7 +125,7 @@
 	<div class="left" style="width: 65%;height: 48px;">
         <a class="left_btn left">
 			总 
-			<span class="score font_wei" id="sum_score">10</span>
+			<span class="score" id="sum_score">10</span>
 			<span >分</span>
 		</a>
 		<a class="right_center"></a>
