--- a/app/partials/toubao_dingzhi_all.html
+++ b/app/partials/toubao_dingzhi_all.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/toubao.css?rev=24ab0ca4c7af2a36b293b50bd6591282">
+<link rel="stylesheet" type="text/css" href="css/toubao.css?rev=dsgfgfdg">
 
 <div class="job_main" id="job_container_1" style="display:none"  cg-busy="firstPromise" >
 	<h4>请选择行业类型</h4>
