--- a/app/css/bd_education.css
+++ b/app/css/bd_education.css
@@ -290,10 +290,6 @@ table td, th {
     box-sizing: border-box;
     -webkit-transform-origin: 0 0;
     transform-origin: 0 0; }
-    @media screen and (orientation: portrait) {
-      .more-container::after {
-        width: 100%;
-        height: 100%; } }
     @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
       .more-container::after {
         width: 200%;
@@ -443,3 +439,7 @@ body {
 
 .content {
   background-color: #fff; }
+
+.tail-container p {
+  margin: 0;
+  padding: 0; }
