--- a/app/css/globe.css
+++ b/app/css/globe.css
@@ -61,7 +61,7 @@ body {
 a, button, input, optgroup, select, textarea {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0); /*去掉a、input和button点击时的蓝色外边框和灰色半透明背景*/
 }
-ul,p{
+ul{
   margin: 0;
   padding: 0;
   list-style: none;
