--- a/app/partials/toubao_dingzhi_all.html
+++ b/app/partials/toubao_dingzhi_all.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/toubao.css?rev=fa6e4f9b8d064051057e74befd5858de">
+<link rel="stylesheet" type="text/css" href="css/toubao.css?rev=b3f088343573de3eac27a816273a331a">
 
 <div class="job_main" id="job_container_1" style="display:none"  cg-busy="firstPromise" >
 	<h4>请选择行业类型</h4>
@@ -90,7 +90,7 @@
                 ng-show="userForm.mobile.$error.maxlength">手机号必须是11位数字</small>
 	</div>
 	<div class="cell">
-		<a href="javascript:void(0)" class="btn btn_n_primary "   ng-click="submitbt('userForm')" style="">确认投保</a>
+		<a href="javascript:void(0)" class="btn btn_n_new_primary "   ng-click="submitbt('userForm')" style="">确认投保</a>
 	</div>
 </form>
 </div>
@@ -111,7 +111,7 @@
 	</table>
 </form>
 <div class="cell">
-	<a href="javascript:void(0)" class="btn btn_n_primary "   ng-click="selectFamily()" style="">确定</a>
+	<a href="javascript:void(0)" class="btn btn_n_new_primary "   ng-click="selectFamily()" style="">确定</a>
 </div>
 </div>
 
