各个页面细节修改

--- a/app/css/claim_information.css
+++ b/app/css/claim_information.css
@@ -30,7 +30,7 @@ img{
 	vertical-align: middle;
 }
 a{
-	color: #588dd4;
+	color: #555;
 	text-decoration: underline;
 	font-size: 14px;
 	display: block; 
