--- a/app/partials/bdm_list.html
+++ b/app/partials/bdm_list.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/bdm_list.css?rev=b39b820344afed7a7402aa78946057b0">
+<link rel="stylesheet" type="text/css" href="css/bdm_list.css?rev=fghgfhf">
 <header>
 	<div class="left">
 		<!--
@@ -63,14 +63,14 @@
 					<img class="logo" ng-src="{{policy.icon}}"   />
 					<div style="margin-right: 1rem;">
 						<div class="product">{{policy.name}}</div>
-						<div class="time" ><img src="img/clock.jpg"/>  {{policy.coverageDate.substring(0,11)}} {{policy.coverageDate.substring(20,30)}} </div>
+						<div class="time" ><img src="img/clock.jpg"/>  {{policy.coverageDate.substring(0,11)}} ~ {{policy.coverageDate.substring(20,30)}} </div>
 					</div>
 					<div style="clear:both;"></div>
 
 					<div class="bd-effective">
-								<img src="img/wsx.png"  ng-show="policy.insure_status==0 " />
-								<img src="img/cover.png"  ng-show="policy.insure_status==1 " />
-								<img src="img/shixiao.png"  ng-show="policy.insure_status==2" />
+						<img src="img/wsx.png"  ng-show="policy.insure_status==0 " />
+						<img src="img/cover.png"  ng-show="policy.insure_status==1 " />
+						<img src="img/shixiao.png"  ng-show="policy.insure_status==2" />
 					</div>
 					<!--
 					<div class="status success"></div>
@@ -88,7 +88,6 @@
 				<!---->
 				<div class="linebox">
 				</div>
-				
 			</div>
 		</li>
 	
