--- a/app/partials/bz_list.html
+++ b/app/partials/bz_list.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/bz.css?rev=gdfgdfgfdg">
+<link rel="stylesheet" type="text/css" href="css/bz.css?rev=dsfdsfdsfsd">
 <div class="mask" id="popup">
 	<div class="toast"></div>h
 </div>
