--- a/app/partials/information.html
+++ b/app/partials/information.html
@@ -1,5 +1,5 @@
 <!-- 投保须知 -->
-<link rel="stylesheet" href="css/information.css?rev=8edd72f8c7ec016617a5ad1941e17d2b">
+<link rel="stylesheet" href="css/information.css?rev=fdhgfhgffffff">
 <div  data-ng-init="init()" cg-busy="myPromise">
 	<ul class="claim_controller">
 		<li ng-if="data.age_notice">
