--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/ring.css?rev=dfgfdgfhgfhghj">
+<link rel="stylesheet" type="text/css" href="css/ring.css?rev=gfhgfhgffh">
 
 <div  class="wrapper"  data-ng-init="init()" style="overflow: hidden;">
 
