--- a/app/partials/bd_education.html
+++ b/app/partials/bd_education.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/bd_education.css?rev=ghfhfghggjjkj">
+<link rel="stylesheet" href="css/bd_education.css?rev=hsfgdsfdshfdsf">
 <header class="icon_{{type}}">
 	我的{{getInsuranceCNname()}}保障
 	<span ng-click="goBdmList()">{{data.aggregate_score}}分 <img src="img/arrow_03.jpg" class="arrow"></span>
@@ -24,7 +24,7 @@
 	</table>
 </div>
   <div id="more-container" class="more-container"> <div class="more" ng-if="data.analysis.length>6">查看更多</div> </div>
-<div style="background-color:#f5f5f5;height:20px;"></div>
+<div style="background-color:#f5f5f5;height:10px;"></div>
 
 </div>
 <div>
