--- a/app/sass/bz.scss
+++ b/app/sass/bz.scss
@@ -31,7 +31,7 @@
 .h5 {
 	color: #222;
     font-size: 15px;
-    margin-top: 9px;
+    margin: .14rem 0 0 0;
 }
 .h5 img {
 	width: 15px; vertical-align: -4px;margin-right: 5px;
