--- a/app/wx_share/partials/bd_part.html
+++ b/app/wx_share/partials/bd_part.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="wx_share/css/bd_part.css?rev=ec44b3f553fa55e9ca700b5febf82fa5">
+<link rel="stylesheet" href="wx_share/css/bd_part.css?rev=hjfdsjfjdshfjsdhj">
 <div id="wrapper" class="wrapper">
 	<div class="bd_part_controller">
 		<ul class="layout ul_contrl">
@@ -63,6 +63,9 @@
 					产品条款及投保须知
 				</a>
 				<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/1" class="blue"  ng-if="coupon_id==1">
+					产品条款及投保须知
+				</a>
+				<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/11" class="blue"  ng-if="coupon_id==3">
 					产品条款及投保须知
 				</a>
 			</div>
