航空延误险活动页

--- a/app/wx_share/partials/coupon_list.html
+++ b/app/wx_share/partials/coupon_list.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="wx_share/css/coupon.css?rev=1c29008c408a98e60010337a9f18d449">
+<link rel="stylesheet" type="text/css" href="wx_share/css/coupon.css?rev=14392fc487f07bb781cc9a2b5c847cd5">
 <div id="wrapper" class="wrapper">
     <ul class="ul_container" style="background-color:#f3f3f3;margin-top:0;padding-left:0;display:none">
 
@@ -8,7 +8,7 @@
            <div class="fl">
                <img src="wx_share/img/ta_logo.png" class="logo_img" ng-if="coupon.coupon_id==1">
                <img src="wx_share/img/pingan_logo.jpg" class="logo_img" ng-if="coupon.coupon_id==2">
-               <img src="wx_share/img/pingan_logo.jpg" class="logo_img" ng-if="coupon.coupon_id==3">
+               <img src="wx_share/img/exchange.png" class="logo_img img_back_grey" ng-if="coupon.coupon_id==3">
             </div>
             <div class="fl coupon_text" style="z-index:10;"  ng-if="coupon.coupon_id==1">
               <p >天安100万航空意外险 </p>
