--- a/app/wx_share/partials/bd_part.html
+++ b/app/wx_share/partials/bd_part.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="wx_share/css/bd_part.css?rev=hjfdsjfjdshfjsdhj">
+<link rel="stylesheet" href="wx_share/css/bd_part.css?rev=ec44b3f553fa55e9ca700b5febf82fa5">
 <div id="wrapper" class="wrapper">
 	<div class="bd_part_controller">
 		<ul class="layout ul_contrl">
