--- a/app/partials/bdm_list.html
+++ b/app/partials/bdm_list.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/bdm_list.css?rev=fghgfhf">
+<link rel="stylesheet" type="text/css" href="css/bdm_list.css?rev=998540fe32f819f775e007dae049b2db">
 <header>
 	<div class="left">
 		<!--
