航意险.加字段

--- a/app/wx_share/partials/index_part.html
+++ b/app/wx_share/partials/index_part.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="wx_share/css/index.css?rev=8ff023dfcc667192636115b886ce7c01">
+<link rel="stylesheet" href="wx_share/css/index.css?rev=vcxvccvxccv">
 <div class="my_bd_controller">
 	<ul class="layout ul_contrl">
 		<li >
@@ -29,8 +29,8 @@
 			</div>
 			<p class="p_color">( 已成功送给<span class="recommend_times font_red">{{data.recommend_times}}</span>位好友 )</p>
 			<div class="dun_font">
-				<p class="font_color_red"><img  src="wx_share/img/my_bd/bx_logo.jpg"> 每月均可无条件免费领取1份</p>
-			    <p class="font_color_red" >&nbsp;&nbsp;&nbsp;&nbsp;每送给1个好友,即可再免费领取1份</p>
+				<div class="font_color_red"><img class="logo_size" src="wx_share/img/my_bd/bx_logo.jpg"> 每月均可无条件免费领取1份</div>
+			    <div class="font_color_red" >&nbsp;&nbsp;&nbsp;&nbsp;每送给1个好友,即可再免费领取1份</div>
 			</div>
 		</div>
 		<div class="down">
@@ -44,7 +44,7 @@
 				<li ><img class="logo_size" src="wx_share/img/my_bd/bx_logo.jpg"> 3份航空意外险可以 &nbsp;&nbsp;&nbsp;&nbsp;兑换1份航班延误险</li>
                 <li class="duihuan_btn" ng-click="exchange()"><img class="logo_money" src="wx_share/img/my_bd/duihuan.png"> 立即兑换</li>
 			</ul>                    
-            <div class="hangyixian">( 你已有<span class="remain_times font_red">{{data.remain_times}}</span>份航意险 )</div>
+            <div class="hangyixian">( 你已有<span class="number font_red">{{data.number}}</span>份航意险 )</div>
 		</div>
 	</div>
 	
